--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
             </div>           
         </div>
         <!-- Fin Content -->
+		
     <!-- Footer -->
         <footer class="bg-dark-subtle text-black text-center py-3">
+            <div class="container">
+			<p> Enlaces relacionados:  <a href="https://www.cop16colombia.com/" target="_blank" style="color:green;">COP16 Colombia - Paz con la Naturaleza</a>
+			<a href="https://www.un.org/es/climatechange" target="_blank" style="color:green;">Cambio Climático | Naciones Unidas</a>
+			<a href="https://www.huelladecarbono.info/" target="_blank" style="color:green;">Huella de Carbono Agenda 2030 Acuerdo de Paris</a></p>
+            </div>
+
             <div class="container">
                 <p class="mb-0">© 2024 - Arquitectura de software subgrupo 22</p>
                 <ul class="list-unstyled d-flex justify-content-center mb-0">
